
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int THREAD_SIZE_MASK ;
 void* atoi (int ) ;
 int definePAE ;
 void* exploitway ;
 int fatal (char*) ;
 int getopt (int,char**,char*) ;
 int getuid () ;
 int havepse ;
 void* npages ;
 int optarg ;
 char* progargv0 ;
 int read_proc () ;
 scalar_t__ thread_size ;
 int uid ;
 int usage (char*) ;

__attribute__((used)) static void
get_config(int ac, char **av)
{

 uid = getuid();
 progargv0 = av[0];

 int r;

 while(ac) {
  r = getopt(ac, av, "e:p:t:ash");

  if(r<0) break;

  switch(r) {

   case 's' :

    havepse = 1;
    break;

   case 'a' :

    definePAE = 1;
    break;

   case 'e' :
    exploitway = atoi(optarg);
    if(exploitway<0) fatal("bad exploitway value");
    break;

   case 'p' :
    npages = atoi(optarg);
    break;
   case 't' :
    thread_size = atoi(optarg);

    break;

   case 'h' :
   default:
    usage(av[0]);
    break;
  }
 }

 THREAD_SIZE_MASK = (thread_size==0)?(-4096):(-8192);

 read_proc();
}
